<resources>
    <string name="app_name" translatable="false">Android-HW-9.2</string>
    <string name="activity_main_name">Локализация и тема</string>
    <string name="btn_ok">ОК</string>
    <string name="text_view_language_choice">Выберите язык</string>
    <string name="text_view_theme_choice">Выберите тему</string>
    <string name="text_view_text">\tЕсли мобильное приложение выходит на международный рынок,
        ему нужна локализация под разные языки.\n\tСоздайте страницу со следующими элементами:\n\n
        \u2022 Spinner со списком языков - Русский и Английский.\n
        \u2022 Кнопка ОК. По клику на данную кнопку - во всем приложении переключается язык.\n
        \u2022 Добавьте текст на странице для отображения на английском и русском.
    </string>
    <string-array name="spinner_loc_array">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string-array name="spinner_margin_array">
        <item>Стандартная</item>
        <item>Крупная</item>
        <item>Средняя</item>
        <item>Мелкая</item>
    </string-array>
</resources>