<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMainActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="20sp"
        android:paddingEnd="20sp">

        <TextView
            android:id="@+id/textViewMainActivityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_name"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textViewLanguageChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_language_choice"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMainActivity"/>

    <Spinner
        android:id="@+id/spinnerLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLanguageChoice"
        android:spinnerMode="dialog"/>

    <TextView
        android:id="@+id/textViewThemeChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_theme_choice"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerLoc"/>

    <Spinner
        android:id="@+id/spinnerTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewThemeChoice"
        android:spinnerMode="dialog"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerTheme"
        android:layout_marginTop="30sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btn_ok"
        android:textSize="20sp"
        android:background="@drawable/corners"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOk"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/text_view_text"
        android:textSize="18sp" />

</androidx.constraintlayout.widget.ConstraintLayout>